--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,6 +93,10 @@ services:
             SERVER_ROOT: /var/www/localhost/htdocs
             SERVER_NAME: localhost
             CLIENT_MAX_BODY_SIZE: 32m
+            PROXY_CONNECT_TIMEOUT: 3000
+            PROXY_SEND_TIMEOUT: 3000
+            PROXY_READ_TIMEOUT: 3000
+            SEND_TIMEOUT: 3000
             PROXY_PASS: http://apache2_mpm:80
         ports:
             - "8005:80"
