--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     php-fpm:
         links:
             - mysql
-# Pls, check image tags, latest is php-7, but we have php-5         
+# Pls, check image tags, latest is php-7, but we have php-5 too.        
         image: lordius/alpine-php_fpm
 #        image: lordius/alpine-php_fpm:php-5
         networks:
