--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,6 @@ services:
     apache2_mpm:
         links:
             - php-fpm   
-            - mysql
         depends_on:
             - mysql 
             - php-fpm
@@ -108,6 +107,8 @@ services:
             - php-fpm
 
     mailhog:
+        links:
+            -  php-fpm
         image: lordius/alpine-mailhog
         networks:
             stack_net:
