--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -126,19 +126,19 @@ services:
         environment:
             ARGS: http 172.53.0.6:80
 
-    selenium:
-        image: selenium/standalone-firefox:2.48.2
-        links:
-        - php-fpm
-        ports:
-        - "4444"
-        - "5900"
-        cap_add:
-        - NET_ADMIN
-        - NET_RAW
-        networks:
-            stack_net:
-                ipv4_address: 172.54.0.9
+#    selenium:
+#        image: selenium/standalone-firefox:2.48.2
+#        links:
+#        - php-fpm
+#        ports:
+#        - "4444"
+#        - "5900"
+#        cap_add:
+#        - NET_ADMIN
+#        - NET_RAW
+#        networks:
+#            stack_net:
+#                ipv4_address: 172.55.0.9
             
 networks:
   stack_net:
