--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,43 +3,45 @@ version: "2"
 services:
     mysql:
         image: mariadb:10.0
-        networks:
-            stack_net:
-                ipv4_address: 172.55.0.2
         ulimits:
             nproc: 65535
             nofile:
                 soft: 20000
                 hard: 40000
+        volumes:
+            - ./docker-runtime/mysql/lib:/var/lib/mysql
         environment:
             MYSQL_ROOT_PASSWORD: drupal
         #command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci # The simple way to override the mariadb config.
-        volumes:
-            - ./docker-runtime/mysql/lib:/var/lib/mysql
+        networks:
+            stack_net:
+                ipv4_address: 172.55.0.2
       
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
-        networks:
-            stack_net:
-                ipv4_address: 172.55.0.3
         depends_on:
             - mysql
         environment:
             PMA_HOST: mysql
             PHP_UPLOAD_MAX_FILESIZE: 1G
             PHP_MAX_INPUT_VARS: 1G
-        ports:
-            - "8001:80"
+#        ports:
+#            - "8001:80"
+        networks:
+            stack_net:
+                ipv4_address: 172.55.0.3
     
     php-fpm:
-        links:
-            - mysql
 # Pls, check image tags, latest is php-7, but we have php-5 too.        
         image: lordius/alpine-php_fpm
 #        image: lordius/alpine-php_fpm:php-5
-        networks:
-            stack_net:
-                ipv4_address: 172.55.0.4
+        links:
+            - mysql
+        depends_on:
+            - mysql
+        volumes:
+            - ./htdocs:/var/www/localhost/htdocs
+            - ./crontasks.txt:/home/crontasks.txt
         environment:
             CRONTAB_ENABLED: 0
             PHP_FPM_PORT: 7000
@@ -54,34 +56,37 @@ services:
             PHP_ALLOW_URL_FOPEN: "On"
             PHP_ALWAYS_POPULATE_RAW_POST_DATA: -1
             PHP_MEMORY_LIMIT: 1024M
-        volumes:
-            - ./htdocs:/var/www/localhost/htdocs
-            - ./crontasks.txt:/home/crontasks.txt
+        networks:
+            stack_net:
+                ipv4_address: 172.55.0.4
         extra_hosts:
             - "docker.lamp:172.55.0.6" 
         
     apache2_mpm:
-        links:
-            - php-fpm   
         image: lordius/alpine-apache
-        networks:
-            stack_net:
-                ipv4_address: 172.55.0.5
+        links:
+            - php-fpm
+        depends_on:
+            - php-fpm
+        volumes_from:
+            - php-fpm
         environment:
             PROXY_PASS: fcgi://php-fpm:7000/var/www/localhost/htdocs
             APACHE_LISTEN_PORT: 80
         ports:
             - "8004:80"
-        volumes_from:
-            - php-fpm   
-            
-    nginx:
-        links:
-            - apache2_mpm   
-        image: lordius/alpine-nginx
         networks:
             stack_net:
-                ipv4_address: 172.55.0.6
+                ipv4_address: 172.55.0.5
+            
+    nginx:
+        image: lordius/alpine-apache
+        links:
+            - apache2_mpm
+        depends_on:
+            - apache2_mpm
+        volumes_from:
+            - php-fpm
         environment:
             KEEPALIVE_TIMEOUT: 3000
             LISTEN_PORT: 80
@@ -95,28 +100,31 @@ services:
             PROXY_PASS: http://apache2_mpm:80
         ports:
             - "8005:80"
-        volumes_from:
-            - php-fpm
+        networks:
+            stack_net:
+                ipv4_address: 172.55.0.6
 
     mailhog:
-        links:
-            -  php-fpm
         image: lordius/alpine-mailhog
+        links:
+            - php-fpm
+        depends_on:
+            - php-fpm
+        ports:
+            - "8006:8025"
         networks:
             stack_net:
                 ipv4_address: 172.55.0.7
-        ports:
-            - "8006:8025"
 
     ngrok:
         image: lordius/alpine-ngrok
+        environment:
+            ARGS: http 172.53.0.6:80
+        ports:
+            - "4040:4040"
         networks:
             stack_net:
                 ipv4_address: 172.55.0.8
-        ports:
-            - "4040:4040"
-        environment:
-            ARGS: http 172.53.0.6:80
 
 #    selenium:
 #        image: selenium/standalone-firefox:2.48.2
