--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,6 +125,26 @@ services:
         networks:
             stack_net:
                 ipv4_address: 172.55.0.8
+
+    php-fpm-data:
+        image: lordius/alpine-php_fpm
+        networks:
+            stack_net:
+                ipv4_address: 172.11.0.9
+
+    selenium:
+        image: selenium/standalone-firefox-debug:2.48.2
+        links:
+            - php-fpm
+        ports:
+            - "4444"
+            - "5900"
+        cap_add:
+            - NET_ADMIN
+            - NET_RAW
+        networks:
+            stack_net:
+                ipv4_address: 172.11.0.10
             
 networks:
   stack_net:
