--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
             stack_net:
                 ipv4_address: 172.55.0.4
         extra_hosts:
-            - "docker.lamp:172.55.0.6" 
+            - "docker.dockerlamp:172.55.0.6" 
 
     apache2_mpm:
         image: lordius/alpine-apache
