--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
             - ./htdocs:/var/www/localhost/htdocs
             - ./crontasks.txt:/home/crontasks.txt
         environment:
+            DRUSH_VERSION: 8.x
+            PHP_SHOW_ERRORS: 1
             CRONTAB_ENABLED: 0
             PHP_FPM_PORT: 7000
             PHP_SENDMAIL_PATH: /usr/sbin/sendmail -i -t
