New variable - PHP_SHORT_OPEN_TAG in php-fpm
Added variable  PHP_SHORT_OPEN_TAG, for managing php.ini directory `short_open_tag`

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,7 @@ services:
             PHP_POST_MAX_SIZE: 756M
             PHP_ALLOW_URL_FOPEN: "On"
             PHP_ALWAYS_POPULATE_RAW_POST_DATA: -1
+            PHP_SHORT_OPEN_TAG: 1
             PHP_MEMORY_LIMIT: 1024M
         networks:
             - internal
